# RotomThePMUBot

./: .gitignore  helpers.py  main.py  pokemon_api.py  pokemon_data.py  pyproject.toml
Data/: Pokemons.json
Data/PokemonData/: Abilities.json  Pokemons.json  Recruitable.json
PMUCrawler/: PMUCrawler.sln
PMUCrawler/PMUCrawler/: PMUCrawler.csproj  PMUData.cs  Program.cs
PMUCrawler/PMUCrawler/Models/: Ability.cs  Location.cs  MysteryEgg.cs  Pokemon.cs  Recruitment.cs
PMUCrawler/PMUCrawler/Ultilities/: JsonExtensions.cs  Singleton.cs  StringExtension.cs
