[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Minh Nguyen Ngoc <mrminht2000@gmail.com.com>"]
description = ""
name = "RotomBot"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "2.0.1"
python = "^3.8"
python-dotenv = "0.19.0"
discord = "1.7.3"
pytz = "2021.1"
[tool.poetry.dev-dependencies]